fix scrollbar issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,10 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow: initial;
+}
+
 .grow {
   flex: 1 1 0;
 }
